features/home-assistant/release.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: home-assistant
