features/home-assistant/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: home-assistant
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: home-assistant
  name: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      containers:
      - image: lscr.io/linuxserver/homeassistant:2026.1.2@sha256:e6f9e3b6ba869e9dbfc2fd6b744221ea0db5b76abdcad71663431b7654a0a372
        name: homeassistant
        ports:
        - name: web
          containerPort: 8123
        volumeMounts:
        - name: datadir
          mountPath: /config
      volumes:
      - name: datadir
        persistentVolumeClaim:
          claimName: home-assistant-pvc
